--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
@@ -66,5 +66,6 @@
       };
       document.body.appendChild(script);
     </script>
+    <div style="border:solid 1px black; height:30px;width:200px;margin:auto;text-align:center" onclick="unityInstance.SendMessage('JavaScripHook','LoadJson')">Load</div>
   </body>
 </html>
