--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -21,8 +21,8 @@
               <div class="title">MovieSorter</div>
           </div>
       </div>
-      <div style="border:solid 1px black; width: 200px; height: 30px; margin: auto; text-align: center" onclick="unityInstance.SendMessage('Data','Save')">Save</div>
-      <div style="border:solid 1px black; width: 200px; height: 30px; margin: auto; text-align: center" onclick="unityInstance.SendMessage('Data','LoadJson','{" names":["d()d"],"companys":["d"],"VHS":[true],"years":[1],"secuals":[1]}
+      <div style="border:solid 1px black; width 200px; height 30px; margin: auto; text-align: center" onclick="unityInstance.SendMessage('Data','Save')">Save</div>
+      <div style="border:solid 1px black; width 200px; height 30px; margin: auto; text-align: center" onclick="unityInstance.SendMessage('Data','LoadJson','{" names":["d()d"],"companys":["d"],"VHS":[true],"years":[1],"secuals":[1]}
            ')">Load</div>
   </body>
 </html>
