--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -11,12 +11,29 @@
 </head>
 
 <body>
-    <form method="post" enctype="multipart/form-data">
-        <input type="file" name="files[]" multiple>
-        <input type="submit" value="Upload File" name="submit">
-    </form>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
 
-	<script src="upload.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDI1U4PjjT9d--anXP0r4zT4m1P0-dqoc4",
+    authDomain: "moviedata-base.firebaseapp.com",
+    databaseURL: "https://moviedata-base.firebaseio.com",
+    projectId: "moviedata-base",
+    storageBucket: "moviedata-base.appspot.com",
+    messagingSenderId: "668249048227",
+    appId: "1:668249048227:web:052564296dcc5c3fa9eb16",
+    measurementId: "G-YPM8QNYGC3"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 </body>
 
 </html>
