--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -41,8 +41,35 @@
   var storageRef = storage.ref();
 
   // Create a child reference
-  var jsonRef = storageRef.child('down.png');
+  var jsonRef = storageRef.child('downt.txt');
   // jsonRef now points to 'down.png'
+
+  // Raw string is the default if no format is provided
+  var message = 'This is my message.';
+  jsonRef.putString(message).then(function(snapshot) {
+  console.log('Uploaded a raw string!');
+
+  // Create a reference from a Google Cloud Storage URI
+  var gsReference = storage.refFromURL('gs://moviedata-base.appspot.com/down.png')});
+  
+  storageRef.child('images/stars.jpg').getDownloadURL().then(function(url) {
+    // `url` is the download URL for 'images/stars.jpg'
+
+    // This can be downloaded directly:
+    var xhr = new XMLHttpRequest();
+    xhr.responseType = 'blob';
+    xhr.onload = function(event) {
+      var blob = xhr.response;
+    };
+    xhr.open('GET', url);
+    xhr.send();
+
+    // Or inserted into an <img> element:
+    var img = document.getElementById('myimg');
+    img.src = url;
+  }).catch(function(error) {
+    // Handle any errors
+  });
 </script>
 </body>
 
