--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -56,19 +56,15 @@
   
   storageRef.child('images/stars.jpg').getDownloadURL().then(function(url) {
     // `url` is the download URL for 'images/stars.jpg'
-
+    console.log(url);
     // This can be downloaded directly:
-    var xhr = new XMLHttpRequest();
-    xhr.responseType = 'blob';
-    xhr.onload = function(event) {
-      var blob = xhr.response;
-    };
-    xhr.open('GET', url);
-    xhr.send();
-
-    // Or inserted into an <img> element:
-    var img = document.getElementById('myimg');
-    img.src = url;
+    //var xhr = new XMLHttpRequest();
+    //xhr.responseType = 'blob';
+    //xhr.onload = function(event) {
+    //  var blob = xhr.response;
+    //};
+    //xhr.open('GET', url);
+    //xhr.send();
   }).catch(function(error) {
     // Handle any errors
   });
