--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -55,6 +55,15 @@
   pathReference.getDownloadURL().then(function(url) {
     // `url` is the download URL for 'downt.txt'
     console.log(url);
+
+    // This can be downloaded directly:
+    var xhr = new XMLHttpRequest();
+    xhr.responseType = 'blob';
+    xhr.onload = function(event) {
+      var blob = xhr.response;
+    };
+    xhr.open('GET', url);
+    xhr.send();
   }).catch(function(error) {});
 </script>
 </body>
