--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -45,6 +45,10 @@
   // Create a child reference
   var jsonRef = storageRef.child('downt.txt');
   // jsonRef now points to 'down.png'
+  test();
+  function test(){
+    console.log('func');
+  }
 </script>
 <button class="btn get" onclick="
 
