--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,58 +10,11 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-storage.js"></script>
+    <script src="Func.js"></script>
     <title>Upload Files</title>
 
 </head>
 <body>
-  <script>
-  // Your web app's Firebase configuration
-  var firebaseConfig = {
-    apiKey: "AIzaSyDI1U4PjjT9d--anXP0r4zT4m1P0-dqoc4",
-    authDomain: "moviedata-base.firebaseapp.com",
-    databaseURL: "https://moviedata-base.firebaseio.com",
-    projectId: "moviedata-base",
-    storageBucket: "moviedata-base.appspot.com",
-    messagingSenderId: "668249048227",
-    appId: "1:668249048227:web:052564296dcc5c3fa9eb16",
-    measurementId: "G-YPM8QNYGC3"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-
-  // Get a reference to the storage service, which is used to create references in your storage bucket
-  var storage = firebase.storage();
-
-  // Create a storage reference from our storage service
-  var storageRef = storage.ref();
-
-  // Create a child reference
-  var jsonRef = storageRef.child('downt.txt');
-  // jsonRef now points to 'down.png'
-  function getString(){
-    var pathReference = storage.ref('downt.txt');
-    pathReference.getDownloadURL().then(function(url) {
-      // `url` is the download URL for 'downt.txt'
-      // This can be downloaded directly:
-      var xhr = new XMLHttpRequest();
-      xhr.responseType = '';
-      xhr.onload = function(event) {
-        var blob = xhr.response;
-        console.log(blob);
-      };
-      xhr.open('GET', url);
-      xhr.send();
-    }).catch(function(error) {});
-  }
-  function sendString(s){
-    // Raw string is the default if no format is provided
-    var message = 'This is my message.';
-    jsonRef.putString(s).then(function(snapshot) {
-      console.log('Uploaded a raw string!');
-    });
-  }
-</script>
 <button class="btn get" onclick="getString();">Get Data</button>
 <button class="btn send" onclick="sendString('This is my message.');">Send Data</button>
 </body>
