--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-storage.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="Func.js"></script>
     <title>Upload Files</title>
 
