--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -16,7 +16,8 @@
 
 </head>
 <body>
-<button class="btn get" onclick="getString();">Get Data</button>
-<button class="btn send" onclick="sendString('This is my message.');">Send Data</button>
+    <button class="btn get" onclick="getString();">Get Data</button>
+    <button class="btn send" onclick="sendString('This is my message.');">Send Data</button>
+    <div id="one">one</div>
 </body>
 </html>
