--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -18,6 +18,6 @@
 <body>
     <button class="btn get" onclick="getString();">Get Data</button>
     <button class="btn send" onclick="sendString('This is my message.');">Send Data</button>
-    <p>this is a p</p>
+    <p id="start">Movies:</p>
 </body>
 </html>
