--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -19,5 +19,8 @@
     <button class="btn get" onclick="getString();">Get Data</button>
     <button class="btn send" onclick="sendString('This is my message.');">Send Data</button>
     <p id="start">Movies:</p>
+    <div id="container">
+
+    </div>
 </body>
 </html>
