--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -12,6 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-storage.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="Func.js"></script>
+    <link rel="stylesheet" href="st.css">
     <title>Upload Files</title>
 
 </head>
