--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -17,11 +17,15 @@
 
 </head>
 <body>
-    <button class="btn get" onclick="getString();">Get Data</button>
-    <button class="btn send" onclick="sendString('This is my message.');">Send Data</button>
+    <div id="buttons">
+    <p class="btn get" onclick="getString();">Get Data</p>
+    <p class="btn send" onclick="sendString('This is my message.');">Send Data</p>
+    </div>
     <p id="start">Movies:</p>
     <div id="con">
 
     </div>
+    <p id="name">Name:</p>
+    <p id="lang">Lang:</p>
 </body>
 </html>
