--- a/MoneyStorage/index.html
+++ b/MoneyStorage/index.html
@@ -1,57 +1,52 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-storage.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="Func.js"></script>
-    <link rel="stylesheet" href="st.css">
-    <title>Upload Files</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<!-- The core Firebase JS SDK is always required and must be listed first -->
+	<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-app.js"></script>
+	<!-- TODO: Add SDKs for Firebase products that you want to use https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-analytics.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.17.2/firebase-storage.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="Func.js"></script>
+	<link rel="stylesheet" href="st.css">
+	<title>Upload Files</title>
 
 </head>
 <body>
-    <div id="buttons">
-    <a class="btn" onclick="getString();">Get Data</a>
-    <a class="btn" onclick="sendString();">Send Data</a>
-    </div>
-    <p id="start">Movies:</p>
-    <div id="con">
-
-    </div>
-    <div id="datas">
-        <a class="data">Name:</a><input id="name">
-        <a class="data">Lang:</a><input id="lang">
-        <a class="data">dvd:</a><input id="dvd" type="checkbox">
-        <a class="data">Company:</a><input id="comp">
-        <a class="data">Part:</a><input id="part" type="number">
-        <a class="btn" onclick="changeE();">Change</a>
-        <a class="btn" onclick="addE();">Add</a>
-        <a class="btn" onclick="remE();">Remove</a>
-    </div>
-    <div id="sort">
-        <input id="enName" type="checkbox" onchange="updateList();">
-        <a class="data">Name:</a>
-        <input id="sortName" onchange="updateList();">
-        <input id="enLang" type="checkbox" onchange="updateList();">
-        <a class="data">Lang:</a>
-        <input id="sortLang" onchange="updateList();">
-        <input id="enDvd" type="checkbox" onchange="updateList();">
-        <a class="data">dvd:</a>
-        <input id="sortDvd" type="checkbox" onchange="updateList();">
-
-        <input id="enComp" type="checkbox" onchange="updateList();">
-        <a class="data">Company:</a>
-        <input id="sortComp" onchange="updateList();">
-        <input id="enPart" type="checkbox" onchange="updateList();">
-        <a class="data">Part:</a>
-        <input id="sortPart" type="number" onchange="updateList();">
-    </div>
+	<div id="buttons">
+	<a class="btn" onclick="getString();">Get Data</a>
+	<a class="btn" onclick="sendString();">Send Data</a>
+	</div>
+	<p id="start">Money:</p>
+	<div id="datas">
+		<a class="data">€0,01:</a><input id="oneCent"     type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€0,02:</a><input id="twoCent"     type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€0,05:</a><input id="fiveCent"    type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€0,1:</a><input  id="oneTenCent"  type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€0,2:</a><input  id="twoTenCent"  type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€0,5:</a><input  id="fiveTenCent" type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€1:</a><input    id="oneEuro"     type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€2:</a><input    id="twoEuro"     type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€5:</a><input    id="fiveEuro"    type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€10:</a><input   id="oneTenEuro"  type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€20:</a><input   id="twoTenEuro"  type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€50:</a><input   id="fiveTenEuro" type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€100:</a><input  id="oneHunEuro"  type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€200:</a><input  id="twoHunEuro"  type="number" class="numField" value=0 onclick="updateList();">
+		<a class="data">€500:</a><input  id="fiveHunEuro" type="number" class="numField" value=0 onclick="updateList();">
+	</div>
+	<div id="sort">
+		<a class="data">Current value:</a>
+		<a class="data" id="current">€00.00</a>
+		<a class="data">Search value:</a>
+		<input id="search" onchange="" value="€00.00" onclick="updateList();">
+	</div>
+	<div id="con">
+		
+	</div>
 </body>
 </html>
