--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -16,61 +16,14 @@
         var c = document.getElementById("myCanvas");
         var ctx = c.getContext("2d");
         var peaces = [
-            [//L1
-                [//normal
-                    [-1, -1], [-1, 0], [0, 0], [1, 0]
-                ], [//90
-                    [1, -1], [0, -1], [0, 0], [0, 1]
-                ], [//180
-                    [-1, 0], [0, 0], [1, 0], [1, 1]
-                ], [//270
-                    [0, -1], [0, 0], [0, 1], [-1, 1]
-                ]
-            ], [//L2
-                [//normal
-                    [1, -1], [1, 0], [0, 0], [-1, 0]
-                ], [//90
-                    [1, 1], [0, 1], [0, 0], [0, -1]
-                ], [//180
-                    [1, 0], [0, 0], [-1, 0], [-1, 1]
-                ], [//270
-                    [0, 1], [0, 0], [0, -1], [-1, -1]
-                ]
-            ], [//T
-                [//normal
-                    [0, 0], [1, 0], [-1, 0], [0, -1]
-                ], [//90
-                    [0, 0], [0, -1], [1, 0], [0, 1]
-                ], [//180
-                    [0, 0], [1, 0], [-1, 0], [0, 1]
-                ], [//270
-                    [0, 0], [-1, 0], [0, 1], [0, -1]
-                ]
-            ], [//I
-                [//normal
-                    [0, 0], [-1, 0], [1, 0], [2, 0]
-                ], [//90
-                    [1, -1], [1, 0], [1, 1], [1, 2]
-                ], [//180
-                    [-1, 1], [0, 1], [1, 1], [2, 1]
-                ], [//270
-                    [0, 0], [0, -1], [0, 1], [0, 2]
-                ]
-            ], [//O
-                [//normal
-                    [0, 0], [1, 0], [0, 1], [1, 1]
-                ], [//90
-                    [0, 0], [1, 0], [0, 1], [1, 1]
-                ], [//180
-                    [0, 0], [1, 0], [0, 1], [1, 1]
-                ], [//270
-                    [0, 0], [1, 0], [0, 1], [1, 1]
-                ]
-            ], [//Z1
-                [//normal
-                    [0, 0], [-1, 0], [1, -1], [0, -1]
-                ], [//90
-                    [0, 0], [0, -1], [1, 0], [1, 1]], [/*180*/[0, 0], [1, 0], [-1, 1], [0, 1]], [/*270*/[0, 0], [0, 1], [-1, 0], [-1, -1]]], [/*Z2*/[/*normal*/[0, 0], [1, 0], [-1, -1], [0, -1]], [/*90*/[0, 0], [0, 1], [1, 0], [1, -1]], [/*180*/[0, 0], [-1, 0], [1, 1], [0, 1]], [/*270*/[0, 0], [0, -1], [-1, 0], [-1, 1]]]];
+            [/*L1*/[/*normal*/[-1, -1], [-1, 0], [0, 0], [1, 0]], [/*90*/[1, -1], [0, -1], [0, 0], [0, 1]], [/*180*/[-1, 0], [0, 0], [1, 0], [1, 1]], [/* 270*/[0, -1], [0, 0], [0, 1], [-1, 1]]],
+            [/*L2*/[/*normal*/[1, -1], [1, 0], [0, 0], [-1, 0]], [/* 90*/[1, 1], [0, 1], [0, 0], [0, -1]], [/* 180*/[1, 0], [0, 0], [-1, 0], [-1, 1]], [/*270*/[0, 1], [0, 0], [0, -1], [-1, -1]]],
+            [/*T */[/*normal*/[0, 0], [1, 0], [-1, 0], [0, -1]], [/* 90*/[0, 0], [0, -1], [1, 0], [0, 1]], [/* 180*/[0, 0], [1, 0], [-1, 0], [0, 1]], [/* 270*/[0, 0], [-1, 0], [0, 1], [0, -1]]],
+            [/*I */[/*normal*/[0, 0], [-1, 0], [1, 0], [2, 0]], [/*  90*/[1, -1], [1, 0], [1, 1], [1, 2]], [/* 180*/[-1, 1], [0, 1], [1, 1], [2, 1]], [/* 270*/[0, 0], [0, -1], [0, 1], [0, 2]]],
+            [/*O */[/*normal*/[0, 0], [1, 0], [0, 1], [1, 1]], [/*   90*/[0, 0], [1, 0], [0, 1], [1, 1]], [/*  180*/[0, 0], [1, 0], [0, 1], [1, 1]], [/*  270*/[0, 0], [1, 0], [0, 1], [1, 1]]],
+            [/*Z1*/[/*normal*/[0, 0], [-1, 0], [1, -1], [0, -1]], [/*90*/[0, 0], [0, -1], [1, 0], [1, 1]], [/* 180*/[0, 0], [1, 0], [-1, 1], [0, 1]], [/* 270*/[0, 0], [0, 1], [-1, 0], [-1, -1]]],
+            [/*Z2*/[/*normal*/[0, 0], [1, 0], [-1, -1], [0, -1]], [/*90*/[0, 0], [0, 1], [1, 0], [1, -1]], [/* 180*/[0, 0], [-1, 0], [1, 1], [0, 1]], [/* 270*/[0, 0], [0, -1], [-1, 0], [-1, 1]]]
+        ];
         var bord = new Array(10);
         for (var i = 0; i < 10; i++) {
             bord[i] = Array(20);
@@ -95,9 +48,12 @@
             ctx.fillStyle = "#FF0000";
             var points = peaces[3][d]//L1 normal
             for (var i = 0; i < 4; i++) {
+                if (bord[x + points[i][0]][y + points[i][1]] != 0) {
+
+                }
                 ctx.fillRect((x + points[i][0]) * (cellSize + 1), (y + points[i][1]) * (cellSize + 1), cellSize, cellSize);
             }
-
+            y++;
             d = (d+1)%4;
         }
 
