--- a/Tetris/index.html
+++ b/Tetris/index.html
@@ -16,15 +16,15 @@
         var c = document.getElementById("myCanvas");
         var ctx = c.getContext("2d");
 
-c.addEventListener("keydown", (event) => {
+document.addEventListener("keydown", (event) => {
     // handle keydown
 });
 
-c.addEventListener("keypress", (event) => {
+document.addEventListener("keypress", (event) => {
     Console.log(event.key);
 });
 
-c.addEventListener("keyup", (event) => {
+document.addEventListener("keyup", (event) => {
     // handle keyup
 });
         var peaces = [
