--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="Func.js"></script> -->
     <!--<link rel="stylesheet" href="st.css"> -->
-    <title>Sintjan</title>
-
+    <title>Sint jan</title>
 </head>
 <body>
+	<div>
+		<img src="/open-iconic/svg/cog.svg">
+	</div>
 </body>
 </html>
