--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -8,10 +8,20 @@
     <!--<link rel="stylesheet" href="st.css"> -->
     <title>Sint jan</title>
 </head>
+<style>
+.icon {
+  fill: #f00;
+}
+
+.icon {
+  width: 16px;
+  height: 16px;
+}
+</style>
 <body>
 	<div>
-		<img src="open-iconic/svg/cog.svg">
-		<img src="open-iconic/svg/home.svg">
+		<img class="icon" src="open-iconic/svg/cog.svg">
+		<img class="icon" src="open-iconic/svg/home.svg">
 	</div>
 </body>
 </html>
