--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -7,6 +7,17 @@
     <!-- <script src="Func.js"></script> -->
     <!--<link rel="stylesheet" href="st.css"> -->
     <title>Sint jan</title>
+	
+	<script src="svg-injector.min.js"></script>
+
+	<script>
+    // Elements to inject
+    var mySVGsToInject = document.querySelectorAll('.iconic-sprite');
+
+    // Do the injection
+    SVGInjector(mySVGsToInject);
+	</script>
+  
 </head>
 <style>
 .icon {
@@ -23,5 +34,10 @@
 		<img class="icon" src="open-iconic/svg/cog.svg">
 		<img class="icon" src="open-iconic/svg/home.svg">
 	</div>
+	<img src="open-iconic.svg" class="iconic-sprite" style="display:none;" />
+
+	<svg viewBox="0 0 8 8" class="icon">
+		<use xlink:href="#account-login" class="icon-account-login"></use>
+	</svg>
 </body>
 </html>
