--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -10,17 +10,17 @@
 	
 	<script src="svg-injector.min.js"></script>
 
-	<script>
+  <script>
     // Elements to inject
     var mySVGsToInject = document.querySelectorAll('.iconic-sprite');
 
     // Do the injection
     SVGInjector(mySVGsToInject);
-	</script>
+  </script>
   
 </head>
 <style>
-.icon {
+.icon-account-login {
   fill: #f00;
 }
 
@@ -36,8 +36,8 @@
 	</div>
 	<img src="open-iconic.svg" class="iconic-sprite" style="display:none;" />
 
-	<svg viewBox="0 0 8 8" class="icon">
-		<use xlink:href="#account-login" class="icon-account-login"></use>
-	</svg>
+  <svg viewBox="0 0 8 8" class="icon">
+    <use xlink:href="#account-login" class="icon-account-login"></use>
+  </svg>
 </body>
 </html>
