--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -6,27 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="Func.js"></script> -->
     <!--<link rel="stylesheet" href="st.css"> -->
-    <title>Sint jan</title>
-	
-	<script src="svg-injector.min.js"></script>
-
-  <script>
-    // Elements to inject
-    var mySVGsToInject = document.querySelectorAll('.iconic-sprite');
-
-    // Do the injection
-    SVGInjector(mySVGsToInject);
-  </script>
-  
+    <title>Sint jan</title>  
 </head>
 <style>
-.icon-account-login {
+.icon {
   fill: #f00;
 }
 
 .icon {
-  width: 16px;
-  height: 16px;
+  width: 32px;
+  height: 32px;
 }
 </style>
 <body>
@@ -34,10 +23,5 @@
 		<img class="icon" src="open-iconic/svg/cog.svg">
 		<img class="icon" src="open-iconic/svg/home.svg">
 	</div>
-	<img src="open-iconic.svg" class="iconic-sprite" style="display:none;" />
-
-  <svg viewBox="0 0 8 8" class="icon">
-    <use xlink:href="#account-login" class="icon-account-login"></use>
-  </svg>
 </body>
 </html>
