--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -10,7 +10,7 @@
 </head>
 <style>
 .icon {
-  fill: #f00;
+  filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
 }
 
 .icon {
