--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -7,6 +7,18 @@
     <!-- <script src="Func.js"></script> -->
     <!--<link rel="stylesheet" href="st.css"> -->
     <title>Sint jan</title>  
+	<script>
+		document.addEventListener('touchstart', this.touchstart);
+		document.addEventListener('touchmove', this.touchmove);
+
+		function touchstart(e) {
+			e.preventDefault()
+		}
+
+		function touchmove(e) {
+			e.preventDefault()
+		}
+	</script>
 </head>
 <style>
 .icon {
