--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="Func.js"></script> -->
     <!--<link rel="stylesheet" href="st.css"> -->
     <title>Sint jan</title>  
