--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -2,32 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-touch-fullscreen" content="yes">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- <script src="Func.js"></script> -->
     <!--<link rel="stylesheet" href="st.css"> -->
     <title>Sint jan</title>  
+	<style>
+		html, body {
+			margin: 0; 
+			padding: 0; 
+			overflow: hidden
+		}
+		html, body {
+			overflow-x: hidden;
+			height: 100%;
+		}
+		body {
+			position: relative;
+		}
+		.icon {
+			filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
+		}
+		.icon {
+			width: 32px;
+			height: 32px;
+		}
+	</style>
 </head>
-<style>
-html,
-body {
-  overflow-x: hidden;
-  height: 100%;
-}
-
-body {
-  position: relative;
-}
-.icon {
-  filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
-}
-
-.icon {
-  width: 32px;
-  height: 32px;
-}
-</style>
 <body>
+	<script>
+		document.body.addEventListener('touchmove', function(event) {
+			event.preventDefault();
+		}, {
+			passive: false,
+			useCapture: false
+		});
+		window.onresize = function() {
+			$(document.body).width(window.innerWidth).height(window.innerHeight);
+		}
+		$(function() {
+			window.onresize();
+		});
+  </script>
 	<div>
 		<img class="icon" src="open-iconic/svg/cog.svg">
 		<img class="icon" src="open-iconic/svg/home.svg">
