--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -27,8 +27,8 @@
 			filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
 		}
 		.icon {
-			width: 32px;
-			height: 32px;
+			width: 10vh;
+			height: 10vh;
 		}
 	</style>
 </head>
