--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -27,6 +27,8 @@
 			filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
 		}
 		.icon {
+			padding-left:  calc(24vw - 5vh);
+			padding-right: calc(24vw - 5vh);
 			width: 10vh;
 			height: 10vh;
 		}
@@ -48,8 +50,7 @@
 		});
   </script>
 	<div>
-		<img class="icon" src="open-iconic/svg/cog.svg">
-		<img class="icon" src="open-iconic/svg/home.svg">
+		<img class="icon" src="open-iconic/svg/cog.svg"><img class="icon" src="open-iconic/svg/home.svg">
 	</div>
 </body>
 </html>
