--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -32,6 +32,10 @@
 			width: 10vh;
 			height: 10vh;
 		}
+		#bar {
+			position: absolute;
+			bottom: 0px;
+		}
 	</style>
 </head>
 <body>
@@ -49,7 +53,7 @@
 			window.onresize();
 		});
   </script>
-	<div>
+	<div id="bar">
 		<img class="icon" src="open-iconic/svg/cog.svg"><img class="icon" src="open-iconic/svg/home.svg">
 	</div>
 </body>
