--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -27,14 +27,18 @@
 			filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
 		}
 		.icon {
-			padding-left:  calc(24vw - 5vh);
-			padding-right: calc(24vw - 5vh);
+			margin-left:  calc(25vw - 5vh);
+			margin-right: calc(25vw - 5vh);
 			width: 10vh;
 			height: 10vh;
+		}
+		.icon:hover {
+			background-color: yellow;
 		}
 		#bar {
 			position: absolute;
 			bottom: 0px;
+			background-color: #00ff00
 		}
 	</style>
 </head>
