--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -80,8 +80,18 @@ li a:hover:not(.active) {
 		node.setAttribute("id", "date");
 		document.getElementsByTagName("BODY")[0].appendChild(node);
   </script>
-	<div id="bar">
-		<img class="icon" src="open-iconic/svg/cog.svg"><img class="icon" src="open-iconic/svg/home.svg">
-	</div>
+		<!-- <img class="icon" src="open-iconic/svg/cog.svg"><img class="icon" src="open-iconic/svg/home.svg"> -->
+	
+<ul>
+  <li><a class="active" href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
+<div style="padding:20px;background-color:#1abc9c;height:1500px;">
+  <h1>Fixed Bottom Navigation Bar</h1>
+  <h2>Scroll this page to see the effect</h2>
+  <h2>The navigation bar will stay at the bottom of the page while scrolling</h2>
 </body>
 </html>
