--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -89,7 +89,7 @@ li a:hover:not(.active) {
   <li><a href="#about">About</a></li>
 </ul>
 
-<div style="padding:20px;background-color:#1abc9c;height:1500px;">
+<div>
   <h1>Fixed Bottom Navigation Bar</h1>
   <h2>Scroll this page to see the effect</h2>
   <h2>The navigation bar will stay at the bottom of the page while scrolling</h2>
