--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -83,8 +83,8 @@ li a:hover:not(.active) {
 		<!-- <img class="icon" src="open-iconic/svg/cog.svg"><img class="icon" src="open-iconic/svg/home.svg"> -->
 	
 <ul>
-  <li><a class="active" href="#home">Home<img class="icon" src="open-iconic/svg/cog.svg"></a></li>
-  <li><a href="#news">News<img class="icon" src="open-iconic/svg/home.svg"></a></li>
+  <li><a class="active" href="#home"><img class="icon" src="open-iconic/svg/cog.svg"></a></li>
+  <li><a href="#news"><img class="icon" src="open-iconic/svg/home.svg"></a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
