--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -13,8 +13,8 @@
 	<style>
 		.icon {
 			filter: invert(20%) sepia(89%) saturate(5906%) hue-rotate(356deg) brightness(96%) contrast(118%);
-			margin-left:  calc(25vw - 5vh);
-			margin-right: calc(25vw - 5vh);
+			margin-left:  5vh;
+			margin-right: 5vh;
 			width: 10vh;
 			height: 10vh;
 		}
