--- a/MovieStorage/index.html
+++ b/MovieStorage/index.html
@@ -18,6 +18,12 @@ echo $html
     <script src="Func.js"></script>
     <link rel="stylesheet" href="st.css">
     <title>Upload Files</title>
+	<script>
+	var url_string = window.location.href; //window.location.href
+	var url = new URL(url_string);
+	var c = url.searchParams.get("name");
+	console.log(c);
+	</script>
 
 </head>
 <body>
