--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -41,7 +41,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3">
                 <h1>
                     <a class="navbar-brand text-white" href="index.html">
-                        <i class="fab fa-laravel"></i> lite
+                        <!--<i class="fab fa-laravel"></i>--><img src="images/Logo.gif">
                     </a>
                 </h1>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
