--- a/Sintjan/index.html
+++ b/Sintjan/index.html
@@ -41,7 +41,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <nav class="navbar navbar-expand-lg navbar-light bg-gradient-secondary pt-3">
                 <h1>
                     <a class="navbar-brand text-white" href="index.html">
-                        <!--<i class="fab fa-laravel"></i>--><img src="images/Logo.png">
+                        <!--<i class="fab fa-laravel"></i>--><img src="images/Logo.png" style="filter: invert(12%) sepia(100%) saturate(7408%) hue-rotate(347deg) brightness(100%) contrast(104%);width: 200px;">
                     </a>
                 </h1>
                 <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
